# engine.io.poc

./: CMakeLists.txt  README.md
inc/: platform-config.h  platform-linux.h  platform-universal.h  platform-win.h
src/: engine.io.cpp  platform.cpp  platform.h
src/system.io.adapters/: operating-context.cpp  operating-context.h  stream.io-uv.cpp  stream.io-uv.h  systembus.cpp  systembus.h
src/system.os/: platform-config.cpp  platform-linux.cpp  platform-win.cpp
tools/performance-benchmarks/message-cat/: message-cat.sln
tools/performance-benchmarks/message-cat/core/: message-cat.vcxproj  message-cat.vcxproj.filters  stdafx.cpp  stdafx.h
tools/performance-benchmarks/message-cat/core/inc/app/: app-config.h  payload-generator.h
tools/performance-benchmarks/message-cat/core/inc/engine.io/: ioprocessor.h  v2error.h
tools/performance-benchmarks/message-cat/core/inc/engine.io/ioadapters/: defs-libuv.h  fnlambdas-libuv.h  monitor-libuv.h  timestamp.h
tools/performance-benchmarks/message-cat/core/inc/engine.io/transporters/: tcp.h
tools/performance-benchmarks/message-cat/core/src/app/: app-config.cpp  message-cat.cpp
tools/performance-benchmarks/message-cat/core/src/engine.io/ioadapters/: monitor-libuv.cpp
tools/performance-benchmarks/message-cat/core/src/engine.io/transporters/: tcp.cpp
tools/performance-benchmarks/message-cat/core/tests/: app-config_ut.cpp  message-cat-ut.playlist
